<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="fill"
    tools:context="com.ucapp.uppercrustapp.UserRegister"
    tools:ignore="InefficientWeight" >

    <ImageView
        android:id="@+id/uc_logo"
        android:layout_width="fill_parent"
        android:layout_height="242dp"
        android:layout_alignParentLeft="true"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/uc_logo"
        android:focusable="false"
        android:scaleType="centerCrop"
        android:src="@drawable/uc_logo_final_1" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/uc_logo"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/firstNameTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstNameTxt"
            android:inputType="textPersonName"
            android:textColorHint="#000000"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/lastNameTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/lastNameTxt"
            android:inputType="textPersonName"
            android:textColorHint="#000000"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/phonetxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:textColorHint="#000000"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="2.98"
            android:background="#000000" >

            <TextView
                android:id="@+id/alertTypeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertTypeTxt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#8cc426"
                android:textColorHint="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/alertTypeTxt"
                android:layout_marginTop="10dp"
                android:text="@string/textMess"
                android:textColor="#8cc426"
                android:textColorHint="#8cc426"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/checkBox_text"
                android:layout_alignBottom="@+id/checkBox_text"
                android:layout_toRightOf="@+id/checkBox_text"
                android:text="@string/emailMess"
                android:textColor="#8cc426"
                android:textColorHint="#8cc426"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submitBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="12dp"
        android:text="@string/submitBTN" 
        android:onClick="registerUser"/>

    <Button
        android:id="@id/cancelBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submitBTN"
        android:layout_alignBottom="@+id/submitBTN"
        android:layout_alignParentRight="true"
        android:text="@string/cancelBTN" 
        android:onClick="returnToMain" />

</RelativeLayout>