<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fgRelLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.ucapp.uppercrustapp.ForgotPassword" >

    <ImageView
        android:id="@+id/uc_logo"
        android:layout_width="fill_parent"
        android:layout_height="242dp"
        android:layout_alignParentLeft="true"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/uc_logo"
        android:focusable="false"
        android:scaleType="centerCrop"
        android:src="@drawable/uc_logo_final_1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/uc_logo"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000"
            android:textStyle="italic" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/sendPassBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sendPassBTN" 
            android:onClick="sendEmailTransition" />
        
        <Button
            android:id="@+id/cancelBTN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelBTN" 
            android:onClick="returnToMain" />

    </LinearLayout>
    
</RelativeLayout>